MFRU-7771 fix word-wrap in icon container

--- a/packages/ui-core/src/icons/Icons.less
+++ b/packages/ui-core/src/icons/Icons.less
@@ -16,6 +16,7 @@
         margin-bottom: 10px;
         text-align: center;
         cursor: pointer;
+        word-wrap: break-word;
     }
 
     &__icon-container:hover:not(&__icon-container_active) &__icon {
